IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type3.src
.IPPcode19
POPS int@nathu
